Main HTML document added, 2nd Search bar with CSS included.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=shopping_cart"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=menu"
+    />
     <title>Online-shop</title>
   </head>
   <body>
@@ -25,10 +29,102 @@
         <li>Help & Contact</li>
       </ul>
       <ul>
-        <li>Log In/Sign Up</li>
-        <li>Account</li>
-        <li><span class="material-symbols-outlined"> shopping_cart </span></li>
+        <li class="account">Log In/Sign Up</li>
+        <li class="account">Account</li>
+        <li class="account">
+          <span class="material-symbols-outlined"> shopping_cart </span>
+        </li>
+        <li class="menu">
+          <span class="material-symbols-outlined"> menu </span>
+        </li>
       </ul>
     </nav>
+    <section id="search-bar">
+      <h1>EASY-SHOP</h1>
+      <form action="">
+        <input type="text" placeholder="Search for..." />
+      </form>
+      <a href="">0% Financing 24 Months</a>
+    </section>
+    <aside>
+      <ul>
+        <li>Clothings & shoes</li>
+        <li>Electronics</li>
+        <li>Books</li>
+        <li>Food & Drinks</li>
+        <li>Appliances</li>
+        <li>Sports & Outdoor</li>
+        <li>Toys & Baby</li>
+        <li>Garden</li>
+      </ul>
+    </aside>
+    <section id="products">
+      <article>
+        <h3>Product Name</h3>
+        <img src="" />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit minus
+          laboriosam quos nihil sapiente sed natus id animi sequi rerum
+          molestias, minima distinctio consectetur labore laudantium
+          exercitationem inventore aliquid pariatur.
+        </p>
+        <p>Price: $27.99</p>
+      </article>
+      <article>
+        <h3>Product Name</h3>
+        <img src="" />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit minus
+          laboriosam quos nihil sapiente sed natus id animi sequi rerum
+          molestias, minima distinctio consectetur labore laudantium
+          exercitationem inventore aliquid pariatur.
+        </p>
+        <p>Price: $27.99</p>
+      </article>
+      <article>
+        <h3>Product Name</h3>
+        <img src="" />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit minus
+          laboriosam quos nihil sapiente sed natus id animi sequi rerum
+          molestias, minima distinctio consectetur labore laudantium
+          exercitationem inventore aliquid pariatur.
+        </p>
+        <p>Price: $27.99</p>
+      </article>
+      <article>
+        <h3>Product Name</h3>
+        <img src="" />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit minus
+          laboriosam quos nihil sapiente sed natus id animi sequi rerum
+          molestias, minima distinctio consectetur labore laudantium
+          exercitationem inventore aliquid pariatur.
+        </p>
+        <p>Price: $27.99</p>
+      </article>
+      <article>
+        <h3>Product Name</h3>
+        <img src="" />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit minus
+          laboriosam quos nihil sapiente sed natus id animi sequi rerum
+          molestias, minima distinctio consectetur labore laudantium
+          exercitationem inventore aliquid pariatur.
+        </p>
+        <p>Price: $27.99</p>
+      </article>
+      <article>
+        <h3>Product Name</h3>
+        <img src="" />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit minus
+          laboriosam quos nihil sapiente sed natus id animi sequi rerum
+          molestias, minima distinctio consectetur labore laudantium
+          exercitationem inventore aliquid pariatur.
+        </p>
+        <p>Price: $27.99</p>
+      </article>
+    </section>
   </body>
 </html>
